--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/my_bg_anim"
+        android:id="@+id/myLayout">
 
         <TabWidget
             android:id="@android:id/tabs"
@@ -25,7 +29,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center" />
-
 
             <TextView
                 android:id="@+id/tab2"
@@ -49,6 +52,10 @@
                 android:text="4" />
 
         </FrameLayout>
+
+
     </LinearLayout>
+
+
 
 </TabHost>
