--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
 <TabHost  xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/host"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#f6f6f4">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,16 +17,99 @@
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary" />
 
+
         <FrameLayout
             android:id="@android:id/tabcontent"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tab1"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center" />
+                android:id="@+id/tab1">
+
+                <ImageView
+                    android:id="@+id/love"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="273dp"
+                    android:src="@drawable/love_sentence" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="13dp"
+                    android:text="내 프로필"
+                    android:textStyle="bold"
+                    android:id="@+id/textView" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignStart="@+id/textView"
+                    android:layout_below="@+id/textView"
+                    android:layout_marginTop="14dp"
+                    android:src="@drawable/profile"
+                    android:id="@+id/imageView" />
+
+                <ImageView
+                    android:layout_width="270dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textView"
+                    android:layout_marginStart="12dp"
+                    android:layout_toEndOf="@+id/imageView"
+                    android:src="@drawable/profile_bar"
+                    android:id="@+id/imageView3" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/imageView3"
+                    android:layout_toStartOf="@+id/imageView3"
+                    android:text="미팅 추천장소"
+                    android:textStyle="bold"
+                    android:id="@+id/textView2" />
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_below="@+id/textView2"
+                    android:layout_marginTop="11dp"
+                    android:layout_toStartOf="@+id/imageView3"
+                    android:src="@drawable/chuchen"
+                    android:id="@+id/imageView4" />
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_alignEnd="@+id/imageView3"
+                    android:layout_alignTop="@+id/imageView6"
+                    android:src="@drawable/chuchen" />
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_alignTop="@+id/imageView5"
+                    android:layout_marginStart="12dp"
+                    android:layout_toEndOf="@+id/imageView5"
+                    android:src="@drawable/chuchen"
+                    android:id="@+id/imageView6" />
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_alignStart="@+id/imageView3"
+                    android:layout_alignTop="@+id/imageView4"
+                    android:src="@drawable/chuchen" />
+
+
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/tab2"
