--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,142 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TabHost  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/host"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Lin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f6f6f4">
-
-    <LinearLayout
+    android:orientation="vertical"
+    tools:context="com.example.yun.togethertogether.MainActivity"
+    >
+    <android.support.v4.app.FragmentTabHost xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:fab="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/tabhost"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/myLayout">
+        android:background="#f6f6f4">
 
-        <TabWidget
-            android:id="@android:id/tabs"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/myLayout">
+
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary" />
 
 
-        <FrameLayout
-            android:id="@android:id/tabcontent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <RelativeLayout
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="0dp"
+                android:layout_height="0dp">
+            </FrameLayout>
+            <FrameLayout
+                android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/tab1">
+                android:layout_weight="1"/>
 
-                <ImageView
-                    android:id="@+id/love"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginBottom="273dp"
-                    android:src="@drawable/love_sentence" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="13dp"
-                    android:text="내 프로필"
-                    android:textStyle="bold"
-                    android:id="@+id/textView" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignStart="@+id/textView"
-                    android:layout_below="@+id/textView"
-                    android:layout_marginTop="14dp"
-                    android:src="@drawable/profile"
-                    android:id="@+id/imageView" />
-
-                <ImageView
-                    android:layout_width="270dp"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/textView"
-                    android:layout_marginStart="12dp"
-                    android:layout_toEndOf="@+id/imageView"
-                    android:src="@drawable/profile_bar"
-                    android:id="@+id/imageView3" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/imageView3"
-                    android:layout_toStartOf="@+id/imageView3"
-                    android:text="미팅 추천장소"
-                    android:textStyle="bold"
-                    android:id="@+id/textView2" />
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_below="@+id/textView2"
-                    android:layout_marginTop="11dp"
-                    android:layout_toStartOf="@+id/imageView3"
-                    android:src="@drawable/chuchen"
-                    android:id="@+id/imageView4" />
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_alignEnd="@+id/imageView3"
-                    android:layout_alignTop="@+id/imageView6"
-                    android:src="@drawable/chuchen" />
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_alignTop="@+id/imageView5"
-                    android:layout_marginStart="12dp"
-                    android:layout_toEndOf="@+id/imageView5"
-                    android:src="@drawable/chuchen"
-                    android:id="@+id/imageView6" />
-
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_alignStart="@+id/imageView3"
-                    android:layout_alignTop="@+id/imageView4"
-                    android:src="@drawable/chuchen" />
+        </LinearLayout>
 
 
 
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/tab2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="2" />
-
-            <TextView
-                android:id="@+id/tab3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="3" />
-
-            <TextView
-                android:id="@+id/tab4"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="4" />
-
-        </FrameLayout>
-
-
-    </LinearLayout>
-
-
-
-</TabHost>
+    </android.support.v4.app.FragmentTabHost>
+</LinearLayout>
