--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="colorPrimary">#FFD2F7</color>
     <color name="colorPrimaryDark">#FFD2F7</color>
-
+    <color name="fabPrimary">#45A1F5</color>
+    <color name="fabPressed">#6EB5F7</color>
+    <color name="fabRipple">#AED6FC</color>
     <color name="colorAccent">#00DFFC</color>
 </resources>
