--- a/app/src/main/res/layout/chatroom.xml
+++ b/app/src/main/res/layout/chatroom.xml
@@ -39,7 +39,8 @@
                 android:layout_alignBottom="@id/backbutton"
                 android:scaleType="centerInside"
                 android:layout_width="36dp"
-                android:layout_height="36dp" />
+                android:layout_height="36dp"
+                android:onClick="onMenuClick"/>
 
 
             <android.support.v7.widget.RecyclerView
