파이어베이스 연동 email 아이디 생성 및 로그인 -인텐트로 회원정보를 넘기는 것까진 구현 x 한번 로그인하면 자동으로 로그인창 넘어감.

--- a/app/src/main/res/layout/activity_member_rgeister.xml
+++ b/app/src/main/res/layout/activity_member_rgeister.xml
@@ -125,6 +125,7 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="13dp"
+                     android:onClick="sendNum"
                      android:text="인증번호 전송" />
              </TableRow>
         </TableLayout>
