--- a/app/src/main/res/layout/list_friend.xml
+++ b/app/src/main/res/layout/list_friend.xml
@@ -2,7 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
     <TextView
         android:id="@+id/tvUseremail"
         android:layout_width="wrap_content"
@@ -16,6 +17,12 @@
         android:paddingBottom="5dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp"/>
+    <Button
+        android:id="@+id/invitebutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="80dp"
+        android:text="초대"
+        />
 
 </LinearLayout>
-
