--- a/app/src/main/res/layout/list_friend.xml
+++ b/app/src/main/res/layout/list_friend.xml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    >
     <TextView
         android:id="@+id/tvUseremail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/chatshape"
         android:textSize="15sp"
-        android:padding="10dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginBottom="5dp"/>
+        />
     <Button
         android:id="@+id/invitebutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="80dp"
-        android:text="초대"
+        android:layout_alignParentEnd="true"
+        android:text="채팅하기"
         />
 
-</LinearLayout>
+</RelativeLayout>
